--- a/bitcoinexplorer1113/src/main/resources/application.properties
+++ b/bitcoinexplorer1113/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bitcoin?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
+bitcoin.rest.url=http://localhost:18332/
