--- a/bitcoinexplorer1113/src/main/resources/application.properties
+++ b/bitcoinexplorer1113/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bitcoin?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 bitcoin.rest.url=http://localhost:18332/
+#bitcoin.sync.interval= 0 0/10 * * * ?
+bitcoin.sync.interval= 0/5 * * * * ?
