--- a/bitcoinexplorer1113/src/main/resources/application.properties
+++ b/bitcoinexplorer1113/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bitcoin?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 bitcoin.rest.url=http://localhost:18332/
-#bitcoin.sync.interval= 0 0/10 * * * ?
-bitcoin.sync.interval= 0/5 * * * * ?
+bitcoin.sync.interval= 0 0/10 * * * ?
+#bitcoin.sync.interval= 0/5 * * * * ?
+bitcoin.syncMempoolTx.interval= 0/3 * * * * ?
